# nexus-ai

./: .coveragerc  .flake8  .gitignore  .pre-commit-config.yaml  CHANGELOG.md  Dockerfile  README.md  answer.py  celery.py  comando.txt  conftest.py  conversations.db  conversations.db-shm  conversations.db-wal  docker-compose.yml  entrypoint.sh  gunicorn-logging.conf.py  gunicorn.conf.py  manage.py  pyproject.toml  streaming_integration_example.py  test_streaming.py  weni-script?.py
.cursor/rules/: default.mdc  specify-rules.mdc
.github/workflows/: build-flows-push-tag-shared.yaml  ci.yml
.specify/: extensions.yml  feature.json  init-options.json  integration.json
.specify/extensions/: .registry
.specify/integrations/: cursor-agent.manifest.json  speckit.manifest.json
.specify/memory/: constitution.md
.specify/templates/: plan-template.md  spec-template.md  tasks-template.md
.specify/workflows/: workflow-registry.json
calling/: agent.py  answer.py  api_models.py  calling.py  clients.py  functions.py  main.py  rtc_config.py  server.py  service.py  team.py
calling/bridge/: __init__.py  answer.py  bridge.py
calling/clients/: meta.py  nexus.py  openai.py
calling/events/: __init__.py  listener.py  registry.py
calling/sessions/: __init__.py  manager.py  session.py
contrib/: create_database.py  gen_env.py  test_active_agents_config.py
contrib/grafana/: inline_agent_turn_latency.json
conversation_ms/: main.py
conversation_ms/consumers/: sqs_consumer.py
conversation_ms/models/: events.py
conversation_ms/repositories/: conversation_repository.py  message_repository.py
conversation_ms/services/: conversation_service.py  csat_nps_service.py  message_migration_service.py  message_service.py
docs/: investigation-datalake-duplicate-events-validation.md
inline_agents/: adapter.py  backend.py  repository.py
inline_agents/backends/: __init__.py  data_lake.py  exceptions.py
inline_agents/data_lake/: __init__.py  event_dto.py  event_service.py  mock_service.py  special_event_handler.py
inline_agents/team/: __init__.py  entity.py  repository.py
nexus/: admin_widgets.py  asgi.py  celery.py  celery_latency_signals.py  celery_otel_bootstrap.py  conftest.py  environment.py  events.py  middleware.py  mixins.py  paginations.py  settings.py  storage.py  tem_latency_old_plan.md  tem_latency_plan.md  test_runner.py  teste.yml  urls.py  utils.py  wsgi.py
nexus/actions/: apps.py  models.py  observers.py  tests.py
nexus/agents/: apps.py  components.py  encryption.py  exceptions.py  models.py
nexus/analytics/: __init__.py  admin.py
nexus/authentication/: __init__.py  authentication.py
nexus/bedrock/: apps.py
nexus/cache/: __init__.py  token.py
nexus/db/: apps.py  models.py
nexus/eda/: __init__.py  registry.py
nexus/evaluation/: __init__.py
nexus/event_domain/: OBSERVER_GUIDE.md  decorators.py  event_manager.py  event_observer.py  middleware.py  observer_factories.py  observer_registry.py  validators.py
nexus/event_driven/: apps.py  handle.py  handle_amq.py  signals.py
nexus/feature_flags/: permissions.py  routers.py  serializers.py  views.py
nexus/inline_agents/: admin.py  apps.py  components.py  handle.py  models.py  tests.py  tests_provider_credentials.py
nexus/intelligences/: apps.py  constants.py  conversation_dto.py  models.py  observer.py  tasks.py
nexus/internals/: __init__.py  billing.py  connect.py  conversations.py  flows.py  jwt_mixins.py
nexus/logs/: apps.py  healthcheck.py  middleware.py  models.py  observers.py
nexus/observers/: __init__.py  apps.py
nexus/orgs/: apps.py  handle.py  models.py  org_dto.py  permissions.py
nexus/projects/: admin.py  ai_resolution_criteria_constants.py  apps.py  channel_ops.py  exceptions.py  handle.py  models.py  observer.py  permissions.py  project_dto.py  signals.py  simulation_model_cache.py  tasks.py
nexus/reports/: apps.py  views.py
nexus/sentry/: __init__.py  apps.py  tests.py  transaction_tracker.py
nexus/settings/: base.py  calling.py  router.py
nexus/task_manager/: apps.py  models.py  tasks.py
nexus/task_managers/: apps.py  models.py  tasks.py  tasks_bedrock.py
nexus/trulens/: __init__.py
nexus/usecases/: __init__.py
nexus/users/: admin.py  apps.py  models.py
nexus/zeroshot/: apps.py  client.py  documents.py  format_classification.py  format_prompt.py  models.py  tests.py
router/: dispatcher.py  handler.py  http_bodies.py  indexer.py  main.py  route.py  test_actions_client.py  test_dispatcher.py  test_http_bodies.py  test_indexer.py  test_route.py  test_route_language_codes.py  test_settings.py
router/classifiers/: __init__.py  chatgpt_function.py  classification.py  groundedness.py  interfaces.py  mocks.py  pre_classification.py  prompt_guard.py  reflection.py  safe_guard.py  test_classification.py  test_pre_classification.py  test_prompt_guard.py  test_reflection.py  test_safe_guard.py  tests.py  zeroshot.py
router/clients/: flows.py  zeroshot.py
router/direct_message/: __init__.py  exceptions.py  interfaces.py
router/entities/: __init__.py  db.py  flow.py  intelligences.py  logs.py  mailroom.py  projects.py  tests.py
router/flow_start/: __init__.py  exceptions.py  interfaces.py
router/llms/: call.py  test_call.py
router/reflection/: version_handler.py  wenigpt.py
router/repositories/: __init__.py  entities.py  mocks.py  test_entities.py
router/services/: cache_invalidation_observers.py  cache_service.py  cache_usage_observers.py  conversation_service.py  inline_agent_config_cache.py  manager_pipeline_version.py  message_service.py  openai_supervisor_cache_service.py  pre_generation_service.py  sqs_producer.py  test_message_service.py
router/tasks/: __init__.py  actions_client.py  celery_latency_signals.py  dynamo_task_manager.py  exceptions.py  generation.py  inline_agent_enqueue.py  inline_agent_metrics.py  inline_message_observers.py  interfaces.py  invocation_context.py  invoke.py  latency_context.py  latency_headers.py  observer.py  tasks.py  (+11 more)
scripts/: run_sqs_test.sh  test_sqs_load.py  validate_sqs_test.py
tests/: test_handler.py
(+783 files in other folders)
