[tool.poetry]
name = "nexus"
version = "0.1.0"
description = ""
authors = ["Alisson <alissonfilipe937@gmail.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = ">=3.10,<3.12"
django = "^4.2.6"
djangorestframework = "^3.14.0"
markdown = "^3.5"
django-filter = "^23.3"
pendulum = "^2.1.2"
django-environ = "^0.11.2"
gunicorn = "^21.2.0"
psycopg2-binary = "^2.9.9"
whitenoise = "^6.6.0"
gevent = "^23.9.1"
factory-boy = "^3.3.0"
celery = "5.3.6"
django-celery-beat = "2.5.0"
django-celery-results = "2.5.1"
redis = "^5.0.1"
requests = "^2.31.0"
drf-spectacular = "^0.27.2"
boto3 = "^1.39.4"
amqp = "^5.2.0"
sentry-sdk = "^1.39.2"
mozilla-django-oidc = "^4.0.0"
django-cors-headers = "^4.3.1"
openai = "1.107.2"
pre-commit = "^3.6.2"
fastapi = "0.116.1"
uvicorn = "^0.29.0"
elastic-apm = "^6.22.2"
django-prometheus = "^2.3.1"
prometheus-client = "^0.20.0"
langchain = "^0.3.1"
langchain-community = "^0.3.1"
playwright = "^1.47.0"
django-storages = "^1.14.4"
ftfy = "^6.2.3"
hiredis = "^3.0.0"
django-redis = "^5.4.0"
channels = {extras = ["daphne"], version = "^4.2.0"}
channels-redis = "^4.2.1"
emoji = "^2.14.0"
tiktoken = "^0.8.0"
termcolor = "^2.5.0"
rich = "^13.9.4"
matplotlib = "^3.10.3"
seaborn = "^0.13.2"
scikit-learn = "^1.6.1"
pandas = "^2.2.3"
weni-datalake-sdk = "0.2.2"
pyjwt = "^2.10.1"
cryptography = "^45.0.5"
openai-agents = {extras = ["litellm"], version = "^0.3.0"}
langfuse = "3.4.0"
nest-asyncio = "^1.6.0"
pydantic-ai = {extras = ["logfire"], version = "^1.7.0"}
aiohttp = "3.10"
litellm = "1.76.3"
grpcio = "^1.76.0"
grpcio-tools = "^1.76.0"
protobuf = ">=6.31,<7.0"




[tool.poetry.group.dev.dependencies]
ipython = "^8.16.1"
taskipy = "^1.12.0"
blue = "^0.9.1"
ruff = "^0.6.0"
isort = "^5.12.0"
ignr = "^2.2"
pytest-django = "^4.6.0"
pytest-cov = "^4.1.0"
freezegun = "^1.4.0"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"


[tool.ruff]
line-length = 120
exclude = ['.venv', 'migrations', 'manage.py', 'wsgi.py', 'asgi.py', '__init__.py', 'inline_agents/backends/bedrock/prompts.py']

[tool.ruff.lint]
select = [
    "E",        # pycodestyle (Error)
    "W",        # pycodestyle (Warning)
    "F",        # Pyflakes
    "B",        # flake8-bugbear
    "Q",        # flake8-quotes
    "UP",       # pyupgrade
    "I",        # isort
    "C901",     # mccabe (complex-structure)
    "DJ",       # flake8-django
]
ignore = [
    "DJ001"     # django-nullable-model-string-field
]

[tool.ruff.lint.mccabe]
max-complexity = 12


[tool.isort]
profile = "black"
line_length = 120
extend_skip = ['migrations', 'manage.py', 'wsgi.py', 'asgi.py', '__init__.py']

[tool.pytest.ini_options]
pythonpath = "."
python_files = "tests.py test_*.py *_tests.py"
DJANGO_SETTINGS_MODULE = "nexus.settings"
addopts = "--ignore=nexus/projects/tests/test_permissions.py --ignore=nexus/actions/tests.py --ignore=nexus/inline_agents/backends/bedrock/ --ignore=inline_agents/backends/bedrock/ --ignore=nexus/inline_agents/backends/bedrock/tests.py --ignore=inline_agents/backends/bedrock/tests/ --ignore=nexus/inline_agents/backends/bedrock/tests/test_adapter.py --ignore=inline_agents/backends/tests/test_adapter.py --ignore=inline_agents/backends/tests/ --ignore=nexus/task_managers/file_database/test_bedrock.py --ignore-glob=inline_agents/backends/bedrock/** --ignore-glob=nexus/inline_agents/backends/bedrock/** --nomigrations"
norecursedirs = [
  "inline_agents/backends/bedrock",
  "nexus/inline_agents/backends/bedrock"
]

[tool.blue]
line-length = 79
extend-exclude = '''
    (
        migrations/
        | manage.py
        | settings.py
        | __init__.py
    )
'''

[tool.coverage.report]
omit = [
  "settings.py",
  "asgi.py",
  "wsgi.py",
  "__init__.py",
  "migrations/",
  "manage.py",
  "nexus/urls.py",
  "router/clients/",
  "router/management/commands/runapi.py",
  "nexus/inline_agents/backends/bedrock/*",
  "inline_agents/backends/bedrock/*",
  "nexus/usecases/inline_agents/bedrock.py",
  "nexus/task_managers/file_database/bedrock.py",
  "nexus/task_managers/tasks_bedrock.py",
  "**/test_*.py",
  "**/*_tests.py",
  "**/tests.py"
]

[tool.taskipy.tasks]
lint = 'ruff check . && blue --check . --diff'
format = 'blue .  && isort .'
pre_test = 'task lint'
test = 'pytest -s -x --cov=. -vv'
post_test = 'coverage html'
run = 'python manage.py runserver'
makemigrations = 'python manage.py makemigrations'
migrate = 'python manage.py migrate'
